# litmus-toml-translator

./: .gitmodules  Cargo.toml  README.md  build.rs  system-litmus-harness-fixes.diff  toml-tests-ignore.txt
src/: arch.rs  error.rs  litmus.rs  main.rs  output.rs  parse.rs
